# RealCoaching-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  adapters_interface.py  docker-compose.yml  index.html  langgraph.json  pyproject.toml
RealCoaching-report/: .dockerignore  Dockerfile  build-all-pages.js  generate-pdf-static.js  package.json  pdf-api-server.js  test-api.js
RealCoaching-report/page-1/: package.json
RealCoaching-report/page-10/: index.html
RealCoaching-report/page-11/: index.html
RealCoaching-report/page-12/: index.html  tailwind.config.js
RealCoaching-report/page-3/: tailwind.css  vite.config.js
RealCoaching-report/page-6/: index.html
RealCoaching-report/page-7/: index.html
adapters/llm/: langchain_llm.py  openai.py
adapters/storage/: memory.py  sqlite.py
graph/: graph.py  graph_utils.py  node_step.py  prompts_loader.py  state.py
insert/: development  insert_session10.txt  insert_session11.txt  insert_session12.txt  insert_session13.txt  insert_session14.txt  insert_session15.txt  insert_session16.txt  insert_session17.txt  insert_session18.txt  insert_session19.txt  insert_session2.txt  insert_session20.txt  insert_session21.txt  insert_session22.txt  insert_session23.txt  insert_session24.txt  insert_session25.txt  insert_session26.txt  insert_session27.txt  insert_session28.txt  insert_session29.txt  insert_session3.txt  insert_session30.txt  insert_session4.txt  insert_session5.txt  insert_session6.txt  insert_session7.txt  insert_session8.txt  insert_session9.txt  name  team  temp  update_sessions.sh
(+59 files in other folders)
