[project]
name = "langgraph-one-node"
version = "0.1.0"
description = "Single-node LangGraph chatbot for rapport→analysis→result in one step per turn"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.33",
  "pydantic>=2.7.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "orjson>=3.10.7",
  "python-dotenv>=1.0.1"
]

[tool.uv]
