[project]
name = "langgraph-one-node"
version = "0.2.0"
description = "Single-node LangGraph chatbot (LangChain init_chat_model, int signals/coverage)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.33",
  "pydantic>=2.7.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "orjson>=3.10.7",
  "python-dotenv>=1.0.1",
  "langchain>=0.2.15",
  "langchain-openai>=0.1.17",
  "langchain-community>=0.3.27",
]

[tool.uv]
